--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "webpurify": "^2.1.0"
   },
   "devDependencies": {
+    "@prisma/client": "^4.12.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
     "nodemon": "^2.0.22",
+    "prisma": "^4.12.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
