--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "nodemon src/index.ts",
-		"vercel-build": "npx prisma migrate deploy",
-		"lint": "eslint --ext .ts ."
+		"vercel-build": "npx prisma migrate deploy && ts-node prisma/seed.ts"
 	},
 	"prisma": {
-  "seed": "ts-node prisma/seed.ts"
+  "seed": "ts-node prisma/seed.ts" 
 },
 	"keywords": [],
 	"author": "",
