--- a/package.json
+++ b/package.json
@@ -1,34 +1,38 @@
 {
-	"name": "test-back",
-	"version": "1.0.0",
-	"type": "module",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"dev": "nodemon src/index.ts",
-		"vercel-build": "npx prisma migrate deploy && ts-node prisma/seed.ts"
-	},
-	"prisma": {
-  "seed": "ts-node prisma/seed.ts" 
-},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"axios": "^1.3.5",
-		"body-parser": "^1.20.2",
-		"cors": "^2.8.5",
-		"dotenv": "^16.0.3",
-		"express": "^4.18.2",
-		"webpurify": "^2.1.0"
-	},
-	"devDependencies": {
-		"@prisma/client": "^4.12.0",
-		"@types/express": "^4.17.17",
-		"@types/node": "^18.15.11",
-		"nodemon": "^2.0.22",
-		"prisma": "^4.12.0",
-		"ts-node": "^10.9.1",
-		"typescript": "^5.0.4"
-	}
+  "name": "test-back",
+  "version": "1.0.0",
+  "type": "module",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "dev": "nodemon src/index.ts",
+    "vercel-build": "npx prisma migrate deploy && ts-node prisma/seed.ts",
+    "test": "jest"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.3.5",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "webpurify": "^2.1.0"
+  },
+  "devDependencies": {
+    "@prisma/client": "^4.12.0",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.1",
+    "@types/node": "^18.15.11",
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
+    "prisma": "^4.12.0",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
+  }
 }
